--- a/multi-arch-manifest.yaml
+++ b/multi-arch-manifest.yaml
@@ -1,15 +1,15 @@
-image: dperson/samba:latest
+image: dingmingglc/samba:latest
 manifests:
-  - image: dperson/samba:amd64
+  - image: dingmingglc/samba:amd64
     platform:
       architecture: amd64
       os: linux
-  - image: dperson/samba:aarch64
+  - image: dingmingglc/samba:aarch64
     platform:
       architecture: arm64
       os: linux
       variant: v8
-  - image: dperson/samba:armhf
+  - image: dingmingglc/samba:armhf
     platform:
       architecture: arm
       os: linux
